--- a/src/client/scss/vmware/components/header-explore.scss
+++ b/src/client/scss/vmware/components/header-explore.scss
@@ -41,6 +41,7 @@
   }
 
   .secondary-nav-cta {
+    width: max-content;
     button {
       margin-left: auto;
       padding-left: 30px;
